--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ $RECYCLE.BIN/
 # Operating System Files
 # =========================
 
+.idea
+
 # OSX
 # =========================
 
@@ -26,7 +28,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
