--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-    "version": "0.2.0",
-    "name": "de.cyberkatze.phonegap.plugin.ClearCache",
-    "cordova_name": "ClearCache",
-    "description": "Cordova ClearCache Plugin",
-    "license": "MIT",
-    "repo": "https://github.com/cyberkatze/ClearCache",
-    "keywords": [
-        "cordova", "cache", "clear", "clearcache", "android"
-    ],
-    "engines": [
-        {
-            "name": "cordova",
-            "version": ">=3.3.0"
-        }
-    ]
+  "version": "0.3.0",
+  "name": "de.cyberkatze.phonegap.plugin.clearcache",
+  "cordova_name": "ClearCache",
+  "description": "Cordova ClearCache Plugin",
+  "license": "MIT",
+  "repo": "https://github.com/cyberkatze/ClearCache",
+  "keywords": [
+    "cordova",
+    "cache",
+    "clear",
+    "clearcache",
+    "android"
+  ],
+  "engines": [
+    {
+      "name": "cordova",
+      "version": ">=3.3.0"
+    }
+  ],
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeryM/ClearCache.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/jeryM/ClearCache/issues"
+  },
+  "homepage": "https://github.com/jeryM/ClearCache#readme"
 }
